fix - Size of page cover of "Sexagesimal" is too small

--- a/app/sketches/sexagesimal/page.scss
+++ b/app/sketches/sexagesimal/page.scss
@@ -85,7 +85,7 @@ $CenterDecSexaNumber_z_index: 20;
     .Text
     {
         text-align: center;
-        font-size: 1.4em;
+        font-size: 4vw;
         margin-bottom: 4vh;
         user-select: none;
     }
